--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,18 +1,12 @@
 name: Deploy to GitHub Pages
 
 on:
-  # Trigger the workflow every time you push to the `main` branch
-  # Using a different branch name? Replace `main` with your branch’s name
   push:
-    branches: [ main ]
-  # Allows you to run this workflow manually from the Actions tab on GitHub.
-  workflow_dispatch:
-
-# Allow this job to clone the repo and create a page deployment
+    branches:
+      - main
+    
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: write
 
 jobs:
   build:
@@ -31,8 +25,8 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
-      - name: Build website
+        run: npm ci
+      - name: Test build website
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -40,8 +34,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./docs/build
-          
- deploy:
+
+  deploy:
     name: Deploy to GitHub Pages
     needs: build
     permissions:
