--- a/src/ponderada1/src/requirements.txt
+++ b/src/ponderada1/src/requirements.txt
@@ -3,9 +3,12 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+docker==7.0.0
 Flask==3.0.3
 Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==4.11.1
+Flask-WTF==1.2.1
 future==1.0.0
 greenlet==3.0.3
 http_request==1.2
@@ -13,9 +16,12 @@ idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+packaging==24.0
 PyJWT==2.8.0
+pywin32==306
 requests==2.31.0
 SQLAlchemy==2.0.29
 typing_extensions==4.11.0
 urllib3==2.2.1
 Werkzeug==3.0.2
+WTForms==3.1.2
