--- a/src/ponderada3/src/flutterzin/pubspec.yaml
+++ b/src/ponderada3/src/flutterzin/pubspec.yaml
@@ -31,11 +31,13 @@ dependencies:
   http: ^1.2.1
   flutter:
     sdk: flutter
-  camera: ^0.9.4+5
+  camera: ^0.11.0+1
   permission_handler: ^11.3.1  # Adicione esta linha
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  path_provider: ^2.0.11
+  path: ^1.8.0
+  image_picker: ^0.8.4+3
+  image: ^3.0.1
+  flutter_local_notifications: ^9.5.2
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
